add the task for sendgin emails to trial clients

--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -8,17 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-10 12:27+0000\n"
-"PO-Revision-Date: 2018-08-10 12:27+0000\n"
+"POT-Creation-Date: 2018-08-13 11:22+0000\n"
+"PO-Revision-Date: 2018-08-13 11:25+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Translated-Using: django-rosetta 0.7.13\n"
 
 #: billing/admin.py:175
@@ -116,7 +114,7 @@ msgstr ""
 msgid "Message from billing"
 msgstr ""
 
-#: billing/templates/emails/client_disabled.html:6 clients/tasks.py:99
+#: billing/templates/emails/client_disabled.html:6 clients/tasks.py:116
 msgid "we miss you!"
 msgstr "мы скучаем по Вам!"
 
@@ -126,24 +124,36 @@ msgid ""
 "\n"
 "\n"
 "<p>Hello, %(name)s!</p>\n"
-"<p>New sales are waiting for you! Rather, unlock Your account to start "
-"selling more.</p>\n"
-"<p>To unlock your account you need to pay for the order #%(id)s from "
-"%(created)s in Your personal account by clicking on the link: <a href="
-"\"%(url)s\">%(url)s</a></p>\n"
-"<p>Do you have features you want to try but haven't set up yet? Write to us. "
-"We are happy only if with us you sell more!</p>\n"
+"<p>New sales are waiting for you! Rather, unlock Your account to start selling more.</p>\n"
+"<p>To unlock your account you need to pay for the order #%(id)s from %(created)s in Your personal account by clicking on the link: <a href=\"%(url)s\">%(url)s</a></p>\n"
+"<p>Do you have features you want to try but haven't set up yet? Write to us. We are happy only if with us you sell more!</p>\n"
 "\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте %(name)s,</p>\n"
-"<p>Новые продажи ждут Вас! Скорее разблокируйте Ваш аккаунт, что бы начать "
-"продавать больше.</p>\n"
-"<p>Для разблокировки аккаунта Вам необходимо оплатить заказ №%(id)s от "
-"%(created)s в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">"
-"%(url)s</a></p>\n"
-"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+"<p>Новые продажи ждут Вас! Скорее разблокируйте Ваш аккаунт, что бы начать продавать больше.</p>\n"
+"<p>Для разблокировки аккаунта Вам необходимо оплатить заказ №%(id)s от %(created)s в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">%(url)s</a></p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+
+#: billing/templates/emails/client_welcome.html:6 clients/tasks.py:99
+msgid "how are your sales?"
+msgstr "как Ваши продажи?"
+
+#: billing/templates/emails/client_welcome.html:10
+#, python-format
+msgid ""
+"\n"
+"        <p>Hello, %(name)s!</p>\n"
+"        <p>How are your sales?</p>\n"
+"        <p>In Maxibooking, we are always happy to help you set up the features, prices and special offers you need, and individually adjust the number of rooms offered for sale for each individual sales channel (Your website, Booking.com et al.)</p>\n"
+"        <p>Write to us. We are happy only if with us you sell more!</p>\n"
+"    "
+msgstr ""
+"\n"
+"<p>Здравствуйте %(name)s,</p>\n"
+"<p>Как Ваши продажи?</p>\n"
+"<p>В Максибукинг мы всегда рады помочь Вам настроить нужные Вам функции, цены и спецпредложения, и индивидуально настроить количество предлагаемых номеров к продаже для каждого отдельного канала продаж (Ваш сайт, Booking.com и др.)  </p>\n"
+"<p>Напишите нам. Мы счастливы только если с нами Вы продаете больше!  </p>"
 
 #: billing/templates/emails/comment_uncompleted.html:6
 msgid "Uncompleted action"
@@ -161,15 +171,9 @@ msgid ""
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You still have %(days)s more days of free use! To continue using "
-"Maxibooking after %(expired)s we have created for You the order #%(id)s "
-"dated %(created)s from the calculation of the number of Your room and the "
-"chosen period. It must be paid before %(expired)s.</p>\n"
-"    <p>View the order, change the period and number of rooms, and make "
-"payment you can in Your personal account by clicking on the link: %(url)s</"
-"p>\n"
-"    <p>Do you have features you want to try but haven't set up yet? Write to "
-"us. We are happy only if with us you sell more!</p>\n"
+"    <p>You still have %(days)s more days of free use! To continue using Maxibooking after %(expired)s we have created for You the order #%(id)s dated %(created)s from the calculation of the number of Your room and the chosen period. It must be paid before %(expired)s.</p>\n"
+"    <p>View the order, change the period and number of rooms, and make payment you can in Your personal account by clicking on the link: %(url)s</p>\n"
+"    <p>Do you have features you want to try but haven't set up yet? Write to us. We are happy only if with us you sell more!</p>\n"
 "\n"
 msgstr ""
 "\n"
@@ -177,15 +181,9 @@ msgstr ""
 "\n"
 "%(greetings_new)s\n"
 "\n"
-"<p>У вас остается еще %(days)s д. бесплатного пользования! Для продолжения "
-"пользования Максибукинг после %(expired)s мы создали для Вас заказ №%(id)s "
-"от %(created)s из расчета количества Ваших номеров и выбранного Вами "
-"периода. Его необходимо оплатить до %(expired)s.</p>\n"
-"<p>Просмотреть заказ, изменить период и количество номеров, и произвести "
-"оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s"
-"\">%(url)s</a></p>\n"
-"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p> \n"
+"<p>У вас остается еще %(days)s д. бесплатного пользования! Для продолжения пользования Максибукинг после %(expired)s мы создали для Вас заказ №%(id)s от %(created)s из расчета количества Ваших номеров и выбранного Вами периода. Его необходимо оплатить до %(expired)s.</p>\n"
+"<p>Просмотреть заказ, изменить период и количество номеров, и произвести оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">%(url)s</a></p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p> \n"
 
 #: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:87
 msgid "Your account is disabled"
@@ -196,22 +194,16 @@ msgstr "Ваш аккаунт заблокирован"
 msgid ""
 "\n"
 "        <p>Hello, %(name)s!</p>\n"
-"        <p>Due to payment arrears, your account in the 'Maxibooking' system "
-"is blocked.</p>\n"
-"        <p>To unlock your account, go to your personal account and pay for "
-"the order #%(order.id)s from %(created)s %(url)s</p> \n"
+"        <p>Due to payment arrears, your account in the 'Maxibooking' system is blocked.</p>\n"
+"        <p>To unlock your account, go to your personal account and pay for the order #%(order.id)s from %(created)s %(url)s</p> \n"
 "    "
 msgstr ""
 "\n"
 "<p>Здравствуйте %(name)s,</p>\n"
-"<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в системе "
-"«Максибукинг» заблокирован.</p>\n"
+"<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» заблокирован.</p>\n"
 "<p>Скорее разблокируйте его, что бы не упустить ни одной брони.</p>\n"
-"<p>Для разблокировки аккаунта Вам необходимо оплатить счет №%(order.id)s от "
-"%(created)s в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">"
-"%(url)s</a></p>\n"
-"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
+"<p>Для разблокировки аккаунта Вам необходимо оплатить счет №%(order.id)s от %(created)s в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">%(url)s</a></p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
 
 #: billing/templates/emails/order_paid.html:6 finances/signals.py:44
 msgid "Your payment was successful"
@@ -229,8 +221,7 @@ msgstr ""
 "<p>Здравствуйте %(name)s,</p>\n"
 "<p>Ваша оплата счета №%(id)s от %(created)s прошла успешно.</p>\n"
 "<p>Мы рады видеть Вас среди наших клиентов!</p>\n"
-"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
 
 #: billing/templates/emails/order_payment_notification.html:6
 #: finances/tasks.py:62
@@ -245,11 +236,9 @@ msgid ""
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You need to pay order #%(id)s from %(created)s for using the "
-"\"Maxbooking\".</p>\n"
+"    <p>You need to pay order #%(id)s from %(created)s for using the \"Maxbooking\".</p>\n"
 "    <p>Payment must be made before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
 "\n"
 msgstr ""
 "\n"
@@ -257,14 +246,10 @@ msgstr ""
 "\n"
 "%(greetings_new)s\n"
 "\n"
-"<p>Для продолжения пользования Максибукинг Вам необходимо оплатить счет №"
-"%(id)s от %(created)s.</p>\n"
-"<p>Просмотреть счет, изменить период и количество номеров, и произвести "
-"оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s"
-"\">%(url)s</a>.</p>\n"
+"<p>Для продолжения пользования Максибукинг Вам необходимо оплатить счет №%(id)s от %(created)s.</p>\n"
+"<p>Просмотреть счет, изменить период и количество номеров, и произвести оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">%(url)s</a>.</p>\n"
 "<p>Счет надо оплатить до %(expired)s.</p>\n"
-"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
 
 #: billing/templates/emails/registration.html:6
 msgid "Registration successefull"
@@ -283,17 +268,14 @@ msgid ""
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Knowledge base for work in the program: https://support.maxi-booking."
-"com</p>\n"
+"    <p>Knowledge base for work in the program: https://support.maxi-booking.com</p>\n"
 "    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
 "\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте %(name)s,</p>\n"
-"<p>Поздравляем и добро пожаловать в Максибукинг! Ваша регистрация прошла "
-"успешно. С этого момента Максибукинг работает для Вас.</p>\n"
-"<p>Для начала работы активируйте, пожалуйста, свой профиль по ссылке: <a "
-"href=\"%(url)s\">%(url)s</a></p>\n"
+"<p>Поздравляем и добро пожаловать в Максибукинг! Ваша регистрация прошла успешно. С этого момента Максибукинг работает для Вас.</p>\n"
+"<p>Для начала работы активируйте, пожалуйста, свой профиль по ссылке: <a href=\"%(url)s\">%(url)s</a></p>\n"
 "<p>Ваши данные для входа:</p>\n"
 "    <ul>\n"
 "        <li>Адрес: <a href=\"%(url)s\">%(url)s</a></li>\n"
@@ -301,37 +283,17 @@ msgstr ""
 "        <li>Пароль: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Что бы помочь Вам скорее начать продавать больше, мы собрали для Вас "
-"полезную информацию в нашей Базе Знаний, которая ждет Вас по ссылке: <a href="
-"\"https://support.maxi-booking.com/hc/ru/\">https://support.maxi-booking.com/"
-"hc/ru/</a> и которая поможет Вам быстро и просто познакомиться с "
-"возможностями и настройками Максибукинг.</p>\n"
+"    <p>Что бы помочь Вам скорее начать продавать больше, мы собрали для Вас полезную информацию в нашей Базе Знаний, которая ждет Вас по ссылке: <a href=\"https://support.maxi-booking.com/hc/ru/\">https://support.maxi-booking.com/hc/ru/</a> и которая поможет Вам быстро и просто познакомиться с возможностями и настройками Максибукинг.</p>\n"
 "    <p>\n"
-"<a href=\"https://maxi-booking.zendesk.com/hc/ru\" class=\"btn-primary\" "
-"itemprop=\"url\" style=\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-"
-"serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-"
-"decoration: none; line-height: 2em; font-weight: bold; text-align: center; "
-"cursor: pointer; display: inline-block; border-radius: 0px; text-transform: "
-"capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; "
-"border-style: solid; border-width: 10px 20px;\">\n"
+"<a href=\"https://maxi-booking.zendesk.com/hc/ru\" class=\"btn-primary\" itemprop=\"url\" style=\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 0px; text-transform: capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px 20px;\">\n"
 "    база знаний\n"
 "</a>&nbsp;&nbsp;\n"
-"<a href=\"https://support.maxi-booking.com/hc/ru/categories/360000231673-"
-"Обучающие-видео\" class=\"btn-primary\" itemprop=\"url\" style=\"font-"
-"family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; "
-"font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-"
-"weight: bold; text-align: center; cursor: pointer; display: inline-block; "
-"border-radius: 0px; text-transform: capitalize; background-color: #ff4632; "
-"margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px "
-"20px;\">\n"
+"<a href=\"https://support.maxi-booking.com/hc/ru/categories/360000231673-Обучающие-видео\" class=\"btn-primary\" itemprop=\"url\" style=\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 0px; text-transform: capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px 20px;\">\n"
 "    видеоуроки\n"
 "</a>\n"
 "</p>\n"
 "\n"
-"<p>Наша служба Клиентской поддержки всегда рада помочь Вам. Напишите нам на "
-"наш контактный адрес: <a href=\"mailto:support@maxi-booking.ru"
-"\">support@maxi-booking.ru</a> и Ваш личный консультант поможет Вам сделать "
-"все необходимые настройки.</p>\n"
+"<p>Наша служба Клиентской поддержки всегда рада помочь Вам. Напишите нам на наш контактный адрес: <a href=\"mailto:support@maxi-booking.ru\">support@maxi-booking.ru</a> и Ваш личный консультант поможет Вам сделать все необходимые настройки.</p>\n"
 "<p>В Максибукинг мы работаем для Вас!\n"
 "<p>Желаем Вам много продаж.\n"
 
@@ -340,14 +302,12 @@ msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "    <p>When installing the program \"Maxibooking\" an error occurred.</p>\n"
-"    <p>To resolve this error, please contact support at: support@maxi-"
-"booking.com</p> \n"
+"    <p>To resolve this error, please contact support at: support@maxi-booking.com</p> \n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "<p>При установке программы «Максибукинг» произошла ошибка.</p>\n"
-"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по "
-"адресу: support@maxi-booking.ru</p> \n"
+"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по адресу: support@maxi-booking.ru</p> \n"
 
 #: billing/templates/emails/sign.html:2
 msgid ""
@@ -355,21 +315,17 @@ msgid ""
 "    <p>Yours faithfully,<br>\n"
 "        Technical support 'Maxibooking'</p>\n"
 "    <p>\n"
-"        E-mail: <a href=\"mailto:support@maxi-booking.com\">support@maxi-"
-"booking.com</a><br>\n"
-"        Knowledge base: <a href=\"https://support.maxi-booking.com\">https://"
-"support.maxi-booking.com</a>\n"
+"        E-mail: <a href=\"mailto:support@maxi-booking.com\">support@maxi-booking.com</a><br>\n"
+"        Knowledge base: <a href=\"https://support.maxi-booking.com\">https://support.maxi-booking.com</a>\n"
 "    </p>\n"
 msgstr ""
 "\n"
 "<p>С уважением,<br>\n"
 "    Служба Клиентской поддержки «Максибукинг»</p>\n"
 "<p>\n"
-"    E-mail: <a href=\"mailto:support@maxi-booking.ru\">support@maxi-booking."
-"ru</a><br>\n"
+"    E-mail: <a href=\"mailto:support@maxi-booking.ru\">support@maxi-booking.ru</a><br>\n"
 "    Телефон: 8 800 200 78 30<br>\n"
-"    База знаний: <a href=\"https://maxi-booking.zendesk.com/hc/ru\">https://"
-"maxi-booking.zendesk.com/hc/ru</a>\n"
+"    База знаний: <a href=\"https://maxi-booking.zendesk.com/hc/ru\">https://maxi-booking.zendesk.com/hc/ru</a>\n"
 "</p>\n"
 "<p>Максибукинг: Работает программа — зарабатываете Вы!</p>\n"
 
