--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-10 12:27+0000\n"
+"POT-Creation-Date: 2018-08-13 11:22+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -113,7 +113,7 @@ msgstr ""
 msgid "Message from billing"
 msgstr ""
 
-#: billing/templates/emails/client_disabled.html:6 clients/tasks.py:99
+#: billing/templates/emails/client_disabled.html:6 clients/tasks.py:116
 msgid "we miss you!"
 msgstr ""
 
@@ -131,6 +131,24 @@ msgid ""
 "<p>Do you have features you want to try but haven't set up yet? Write to us. "
 "We are happy only if with us you sell more!</p>\n"
 "\n"
+msgstr ""
+
+#: billing/templates/emails/client_welcome.html:6 clients/tasks.py:99
+msgid "how are your sales?"
+msgstr ""
+
+#: billing/templates/emails/client_welcome.html:10
+#, python-format
+msgid ""
+"\n"
+"        <p>Hello, %(name)s!</p>\n"
+"        <p>How are your sales?</p>\n"
+"        <p>In Maxibooking, we are always happy to help you set up the "
+"features, prices and special offers you need, and individually adjust the "
+"number of rooms offered for sale for each individual sales channel (Your "
+"website, Booking.com et al.)</p>\n"
+"        <p>Write to us. We are happy only if with us you sell more!</p>\n"
+"    "
 msgstr ""
 
 #: billing/templates/emails/comment_uncompleted.html:6
