--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-09-28 09:54+0000\n"
+"POT-Creation-Date: 2018-09-28 10:19+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -874,7 +874,7 @@ msgid "piece"
 msgstr ""
 
 #: finances/templates/finances/invalid_type.html:16
-msgid "The required information are not filled in: "
+msgid "The invalid order or the required information are not filled in: "
 msgstr ""
 
 #: finances/templates/finances/rbk.html:17
