--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-05 10:30+0000\n"
+"POT-Creation-Date: 2019-02-06 09:52+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,8 +38,7 @@ msgstr ""
 msgid "Action is marked as canceled."
 msgstr ""
 
-#: billing/lib/mb.py:72 billing/lib/mb.py:106
-#: billing/templates/emails/registration_fail.html:6 clients/views.py:362
+#: billing/lib/mb.py:72 billing/lib/mb.py:106 clients/views.py:362
 msgid "Registation failed"
 msgstr ""
 
@@ -125,7 +124,6 @@ msgid "An error occurred. Please try again later"
 msgstr ""
 
 #: billing/templates/billing/payment_successful.html:13
-#: billing/templates/emails/order_paid.html:6 finances/signals.py:74
 msgid "Your payment was successful"
 msgstr ""
 
@@ -135,11 +133,11 @@ msgid "processing"
 msgstr ""
 
 #: billing/templates/emails/base_manager.html:6
-msgid "Message from billing"
+msgid "Action required"
 msgstr ""
 
 #: billing/templates/emails/client_disabled.html:6 clients/tasks.py:117
-msgid "we miss you!"
+msgid "we miss You!"
 msgstr ""
 
 #: billing/templates/emails/client_disabled.html:11
@@ -148,39 +146,40 @@ msgid ""
 "\n"
 "\n"
 "<p>Hello!</p>\n"
-"<p>New sales are waiting for you! Rather, unlock Your account to start "
+"<p>New Sales are waiting for You! Quickly unlock your account and start "
 "selling more.</p>\n"
-"<p>To unlock your account you need to pay for the order #%(id)s from "
-"%(created)s in Your personal account by clicking on the link: <a href="
-"\"%(url)s\">%(url)s</a></p>\n"
-"<p>Do you have features you want to try but haven't set up yet? Write to us. "
-"We are happy only if with us you sell more!</p>\n"
+"<p>To unlock your account simply make a payment for your Invoice #%(id)s "
+"from %(created)s in \"My Account\" by clicking on the link: <a href=\"%(url)s"
+"\">%(url)s</a></p>\n"
+"<p>Are there features that you want to try but didn't have a chance to try "
+"yet? Write to us. We are happy only when you sell more with us!</p>   \n"
 "\n"
 msgstr ""
 
 #: billing/templates/emails/client_welcome.html:6 clients/tasks.py:100
-msgid "how are your sales?"
+msgid "How is your Sales?"
 msgstr ""
 
 #: billing/templates/emails/client_welcome.html:10
 msgid ""
 "\n"
 "        <p>Hello!</p>\n"
-"        <p>How are your sales?</p>\n"
-"        <p>In Maxibooking, we are always happy to help you set up the "
-"features, prices and special offers you need, and individually adjust the "
-"number of rooms offered for sale for each individual sales channel (Your "
-"website, Booking.com et al.)</p>\n"
-"        <p>Write to us. We are happy only if with us you sell more!</p>\n"
+"        <p>How is your Sales?</p>\n"
+"        <p>At Maxibooking, we are always happy to help you set up all the "
+"features, prices and special offers you need, including individual "
+"configuration of the number of rooms and properties offered for sale in each "
+"of your sales channels (Your personal website, Booking.com and others.)</p>\n"
+"        <p>Are there features that you want to try but didn't have a chance "
+"to try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 "    "
 msgstr ""
 
 #: billing/templates/emails/comment_uncompleted.html:6
-msgid "Uncompleted action"
+msgid "Action not completed"
 msgstr ""
 
 #: billing/templates/emails/new_order.html:6
-msgid "New order #"
+msgid "New Invoice #"
 msgstr ""
 
 #: billing/templates/emails/new_order.html:10
@@ -191,20 +190,20 @@ msgid ""
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You still have %(days)s more days of free use! To continue using "
-"Maxibooking after %(expired)s we have created for You the order #%(id)s "
-"dated %(created)s from the calculation of the number of Your room and the "
-"chosen period. It must be paid before %(expired)s.</p>\n"
-"    <p>View the order, change the period and number of rooms, and make "
-"payment you can in Your personal account by clicking on the link: %(url)s</"
+"    <p>You still have %(days)s more days of Free Trial! To continue using "
+"MaxiBooking after %(expired)s the Invoice #%(id)s dated %(created)s has been "
+"created based on your number of properties and selected subscription period. "
+"The Invoice should be paid before %(expired)s.</p>\n"
+"    <p>To view your Invoice, update and confirm your subscription details, "
+"and pay online simply go to “My Account” by clicking on the link: %(url)s</"
 "p>\n"
-"    <p>Do you have features you want to try but haven't set up yet? Write to "
-"us. We are happy only if with us you sell more!</p>\n"
+"    <p>Are there features that you want to try but didn’t have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 "\n"
 msgstr ""
 
-#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:87
-msgid "Your account is disabled"
+#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:88
+msgid "Oh No! Your Account has been suspended"
 msgstr ""
 
 #: billing/templates/emails/order_client_disabled.html:10
@@ -212,11 +211,19 @@ msgstr ""
 msgid ""
 "\n"
 "        <p>Hello!</p>\n"
-"        <p>Due to payment arrears, your account in the 'Maxibooking' system "
-"is blocked.</p>\n"
-"        <p>To unlock your account, go to your personal account and pay for "
-"the order #%(order.id)s from %(created)s %(url)s</p> \n"
+"        <p>Due to unpaid Invoice, your account has been suspended.</p>\n"
+"        <p>Quickly unlock your account so you don’t lose new bookings! </p>\n"
+"        <p>To unlock your account simply make a payment for your Invoice #"
+"%(order.id)s from %(created)s in \"My Account\" by clicking on the link: <a "
+"href=\"%(url)s\">%(url)s</a></p>\n"
+"        <p>Are there features that you want to try but didn't have a chance "
+"to try yet? Write to us. We are happy only when you sell more with us!</p>\n"
+"\n"
 "    "
+msgstr ""
+
+#: billing/templates/emails/order_paid.html:6 finances/signals.py:74
+msgid "Thank you for your payment!"
 msgstr ""
 
 #: billing/templates/emails/order_paid.html:10
@@ -224,13 +231,15 @@ msgstr ""
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
-"    <p>Thank you for payment!</p>\n"
-"    <p>Order #%(id)s from %(created)s was paid.</p>\n"
+"    <p>Your payment for Invoice #%(id)s from %(created)s has been successful."
+"</p>\n"
+"    <p>We are delighted to have You as our client.</p>\n"
+"    <p>Are there features that you want to try but didn’t have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 msgstr ""
 
 #: billing/templates/emails/order_payment_notification.html:6
-#: finances/tasks.py:62
-msgid "Order will expire soon"
+msgid "Invoice is due - don’t forget to extend your access!"
 msgstr ""
 
 #: billing/templates/emails/order_payment_notification.html:10
@@ -241,32 +250,37 @@ msgid ""
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You need to pay order #%(id)s from %(created)s for using the "
-"\"Maxbooking\".</p>\n"
-"    <p>Payment must be made before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>You Invoice #%(id)s from %(created)s is due.</p>\n"
+"    <p>Great opportunities and more Sales await. Don't forget to extend your "
+"access by paying you Invoice by %(expired)s</p>\n"
+"    <p>To view your Invoice, update and confirm your subscription details, "
+"and pay online simply go to “My Account” by clicking on the link: %(url)s</"
+"p>\n"
+"    <p>Are there features that you want to try but didn't have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p> \n"
 "\n"
 msgstr ""
 
 #: billing/templates/emails/registration.html:6
-msgid "Registration successefull"
+msgid "Registration Successefull"
 msgstr ""
 
 #: billing/templates/emails/registration.html:10
 #, python-format
 msgid ""
 "\n"
-"    <p>Hello!</p>\n"
-"    <p>Thank you for registering in 'Maxibooking'!</p>\n"
-"    <p>To enter the program, please follow the link: %(url)s\n"
-"        and use the user's credentials:</p>\n"
+"\n"
+"    <p>Greetings!</p>\n"
+"    <p>Welcome to 'MaxiBooking'! You are now well on your way to start "
+"selling more. </p>\n"
+"    <p>To login to your account, please follow the link: %(url)s\n"
+"    and use your login credentials:</p>\n"
 "    <ul>\n"
 "        <li>username: admin</li>\n"
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Meet your website from Maxi Booking!</p>\n"
+"    <p>To visit Your SMART website simply click on the button below!</p>\n"
 "    <p>\n"
 "        <a href=\"%(website)s\" class=\"btn-primary\" itemprop=\"url\" style="
 "\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: "
@@ -276,30 +290,39 @@ msgid ""
 "background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: "
 "solid; border-width: 10px 20px;\">go to your website</a>\n"
 "    </p>\n"
-"    <p>Knowledge base for work in the program: https://support.maxi-booking."
+"    <p>Don't hesitate to check out our Customer Support Knowledge Base for "
+"lots of guiding material that we have prepared for You: https://support.maxi-"
+"booking.com</p>\n"
+"    <p>Let us know what you think. We love to hear from You. For feedback "
+"and if you have any questions just send us an email at: support@maxi-booking."
 "com</p>\n"
-"    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
+"    <p>We are happy only when you sell more with us!</p>\n"
 "\n"
+msgstr ""
+
+#: billing/templates/emails/registration_fail.html:6
+msgid "Registation failure"
 msgstr ""
 
 #: billing/templates/emails/registration_fail.html:10
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
-"    <p>When installing the program \"Maxibooking\" an error occurred.</p>\n"
-"    <p>To resolve this error, please contact support at: support@maxi-"
-"booking.com</p> \n"
+"    <p>Looks like some part of the program has not been installed correctly."
+"</p>\n"
+"    <p>To resolve this, please contact Customer Support Team at: "
+"support@maxi-booking.com</p> \n"
 msgstr ""
 
 #: billing/templates/emails/sign.html:2
 msgid ""
 "\n"
-"    <p>Yours faithfully,<br>\n"
-"        Technical support 'Maxibooking'</p>\n"
+"    <p>Yours Faithfully,<br>\n"
+"        MaxiBooking Customer Support Team</p>\n"
 "    <p>\n"
 "        E-mail: <a href=\"mailto:support@maxi-booking.com\">support@maxi-"
 "booking.com</a><br>\n"
-"        Knowledge base: <a href=\"https://support.maxi-booking.com\">https://"
+"        Knowledge Base: <a href=\"https://support.maxi-booking.com\">https://"
 "support.maxi-booking.com</a>\n"
 "    </p>\n"
 msgstr ""
@@ -938,7 +961,11 @@ msgid "We are glad to see you among our clients!"
 msgstr ""
 
 #: finances/tasks.py:31
-msgid "New order created"
+msgid "New Invoice created"
+msgstr ""
+
+#: finances/tasks.py:63
+msgid "Invoice is due - don’t forget to extend your access! "
 msgstr ""
 
 #: finances/templates/finances/bill.html:114
