--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-05 10:30+0000\n"
+"POT-Creation-Date: 2019-02-06 09:52+0000\n"
 "PO-Revision-Date: 2018-12-13 12:04+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,8 +41,7 @@ msgstr ""
 msgid "Action is marked as canceled."
 msgstr ""
 
-#: billing/lib/mb.py:72 billing/lib/mb.py:106
-#: billing/templates/emails/registration_fail.html:6 clients/views.py:362
+#: billing/lib/mb.py:72 billing/lib/mb.py:106 clients/views.py:362
 msgid "Registation failed"
 msgstr "Ошибка при регистрации"
 
@@ -128,7 +127,6 @@ msgid "An error occurred. Please try again later"
 msgstr ""
 
 #: billing/templates/billing/payment_successful.html:13
-#: billing/templates/emails/order_paid.html:6 finances/signals.py:74
 msgid "Your payment was successful"
 msgstr "Успешная оплата"
 
@@ -138,25 +136,26 @@ msgid "processing"
 msgstr ""
 
 #: billing/templates/emails/base_manager.html:6
-msgid "Message from billing"
+msgid "Action required"
 msgstr ""
 
 #: billing/templates/emails/client_disabled.html:6 clients/tasks.py:117
-msgid "we miss you!"
+msgid "we miss You!"
 msgstr "мы скучаем по Вам!"
 
 #: billing/templates/emails/client_disabled.html:11
+#, python-format
 msgid ""
 "\n"
 "\n"
 "<p>Hello!</p>\n"
-"<p>New sales are waiting for you! Rather, unlock Your account to start "
+"<p>New Sales are waiting for You! Quickly unlock your account and start "
 "selling more.</p>\n"
-"<p>To unlock your account you need to pay for the order #%(id)s from "
-"%(created)s in Your personal account by clicking on the link: <a href="
-"\"%(url)s\">%(url)s</a></p>\n"
-"<p>Do you have features you want to try but haven't set up yet? Write to us. "
-"We are happy only if with us you sell more!</p>\n"
+"<p>To unlock your account simply make a payment for your Invoice #%(id)s "
+"from %(created)s in \"My Account\" by clicking on the link: <a href=\"%(url)s"
+"\">%(url)s</a></p>\n"
+"<p>Are there features that you want to try but didn't have a chance to try "
+"yet? Write to us. We are happy only when you sell more with us!</p>   \n"
 "\n"
 msgstr ""
 "\n"
@@ -170,19 +169,20 @@ msgstr ""
 "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
 
 #: billing/templates/emails/client_welcome.html:6 clients/tasks.py:100
-msgid "how are your sales?"
+msgid "How is your Sales?"
 msgstr "как Ваши продажи?"
 
 #: billing/templates/emails/client_welcome.html:10
 msgid ""
 "\n"
 "        <p>Hello!</p>\n"
-"        <p>How are your sales?</p>\n"
-"        <p>In Maxibooking, we are always happy to help you set up the "
-"features, prices and special offers you need, and individually adjust the "
-"number of rooms offered for sale for each individual sales channel (Your "
-"website, Booking.com et al.)</p>\n"
-"        <p>Write to us. We are happy only if with us you sell more!</p>\n"
+"        <p>How is your Sales?</p>\n"
+"        <p>At Maxibooking, we are always happy to help you set up all the "
+"features, prices and special offers you need, including individual "
+"configuration of the number of rooms and properties offered for sale in each "
+"of your sales channels (Your personal website, Booking.com and others.)</p>\n"
+"        <p>Are there features that you want to try but didn't have a chance "
+"to try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 "    "
 msgstr ""
 "\n"
@@ -195,29 +195,30 @@ msgstr ""
 "<p>Напишите нам. Мы счастливы только если с нами Вы продаете больше!  </p>"
 
 #: billing/templates/emails/comment_uncompleted.html:6
-msgid "Uncompleted action"
+msgid "Action not completed"
 msgstr ""
 
 #: billing/templates/emails/new_order.html:6
-msgid "New order #"
+msgid "New Invoice #"
 msgstr "Новый счет №"
 
 #: billing/templates/emails/new_order.html:10
+#, python-format
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You still have %(days)s more days of free use! To continue using "
-"Maxibooking after %(expired)s we have created for You the order #%(id)s "
-"dated %(created)s from the calculation of the number of Your room and the "
-"chosen period. It must be paid before %(expired)s.</p>\n"
-"    <p>View the order, change the period and number of rooms, and make "
-"payment you can in Your personal account by clicking on the link: %(url)s</"
+"    <p>You still have %(days)s more days of Free Trial! To continue using "
+"MaxiBooking after %(expired)s the Invoice #%(id)s dated %(created)s has been "
+"created based on your number of properties and selected subscription period. "
+"The Invoice should be paid before %(expired)s.</p>\n"
+"    <p>To view your Invoice, update and confirm your subscription details, "
+"and pay online simply go to “My Account” by clicking on the link: %(url)s</"
 "p>\n"
-"    <p>Do you have features you want to try but haven't set up yet? Write to "
-"us. We are happy only if with us you sell more!</p>\n"
+"    <p>Are there features that you want to try but didn’t have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 "\n"
 msgstr ""
 "\n"
@@ -235,37 +236,65 @@ msgstr ""
 "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
 "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p> \n"
 
-#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:87
-msgid "Your account is disabled"
+#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:88
+msgid "Oh No! Your Account has been suspended"
 msgstr "Ваш аккаунт заблокирован"
 
 #: billing/templates/emails/order_client_disabled.html:10
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        <p>Hello!</p>\n"
+#| "        <p>Due to unpaid Invoice, your account has been suspended.</p>\n"
+#| "        <p>Quickly unlock your account so you don’t lose new bookings! </"
+#| "p>\n"
+#| "        <p>To unlock your account simply make a payment for your Invoice #"
+#| "%(order.id)s from %(created)s in \"My Account\" by clicking on the link: "
+#| "<a href=\"%(url)s\">%(url)s</a></p>\n"
+#| "        <p>Are there features that you want to try but didn't have a "
+#| "chance to try yet? Write to us. We are happy only when you sell more with "
+#| "us!</p>\n"
+#| "\n"
+#| "    "
 msgid ""
 "\n"
 "        <p>Hello!</p>\n"
-"        <p>Due to payment arrears, your account in the 'Maxibooking' system "
-"is blocked.</p>\n"
-"        <p>To unlock your account, go to your personal account and pay for "
-"the order #%(order.id)s from %(created)s %(url)s</p> \n"
+"        <p>Due to unpaid Invoice, your account has been suspended.</p>\n"
+"        <p>Quickly unlock your account so you don’t lose new bookings! </p>\n"
+"        <p>To unlock your account simply make a payment for your Invoice #"
+"%(order.id)s from %(created)s in \"My Account\" by clicking on the link: <a "
+"href=\"%(url)s\">%(url)s</a></p>\n"
+"        <p>Are there features that you want to try but didn't have a chance "
+"to try yet? Write to us. We are happy only when you sell more with us!</p>\n"
+"\n"
 "    "
 msgstr ""
 "\n"
 "<p>Здравствуйте,</p>\n"
-"<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в системе "
-"«Максибукинг» заблокирован.</p>\n"
-"<p>Скорее разблокируйте его, что бы не упустить ни одной брони.</p>\n"
-"<p>Для разблокировки аккаунта Вам необходимо оплатить счет №%(order.id)s от "
+"<p>Новые продажи ждут Вас! Скорее разблокируйте Ваш аккаунт, что бы начать "
+"продавать больше.</p>\n"
+"<p>Для разблокировки аккаунта Вам необходимо оплатить заказ №%(id)s от "
 "%(created)s в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s\">"
 "%(url)s</a></p>\n"
 "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
+"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+"\n"
+"    "
+
+#: billing/templates/emails/order_paid.html:6 finances/signals.py:74
+msgid "Thank you for your payment!"
+msgstr "Спасибо за Ваш платеж"
 
 #: billing/templates/emails/order_paid.html:10
+#, python-format
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
-"    <p>Thank you for payment!</p>\n"
-"    <p>Order #%(id)s from %(created)s was paid.</p>\n"
+"    <p>Your payment for Invoice #%(id)s from %(created)s has been successful."
+"</p>\n"
+"    <p>We are delighted to have You as our client.</p>\n"
+"    <p>Are there features that you want to try but didn’t have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p>\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте,</p>\n"
@@ -275,22 +304,25 @@ msgstr ""
 "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
 
 #: billing/templates/emails/order_payment_notification.html:6
-#: finances/tasks.py:62
-msgid "Order will expire soon"
+msgid "Invoice is due - don’t forget to extend your access!"
 msgstr "Продление периода использования"
 
 #: billing/templates/emails/order_payment_notification.html:10
+#, fuzzy, python-format
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "\n"
 "    %(greetings_new)s\n"
 "\n"
-"    <p>You need to pay order #%(id)s from %(created)s for using the "
-"\"Maxbooking\".</p>\n"
-"    <p>Payment must be made before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>You Invoice #%(id)s from %(created)s is due.</p>\n"
+"    <p>Great opportunities and more Sales await. Don't forget to extend your "
+"access by paying you Invoice by %(expired)s</p>\n"
+"    <p>To view your Invoice, update and confirm your subscription details, "
+"and pay online simply go to “My Account” by clicking on the link: %(url)s</"
+"p>\n"
+"    <p>Are there features that you want to try but didn't have a chance to "
+"try yet? Write to us. We are happy only when you sell more with us!</p> \n"
 "\n"
 msgstr ""
 "\n"
@@ -298,33 +330,35 @@ msgstr ""
 "\n"
 "%(greetings_new)s\n"
 "\n"
-"<p>Для продолжения пользования Максибукинг Вам необходимо оплатить счет №"
-"%(id)s от %(created)s.</p>\n"
-"<p>Просмотреть счет, изменить период и количество номеров, и произвести "
+"<p>У вас остается еще %(days)s д. бесплатного пользования! Для продолжения "
+"пользования Максибукинг после %(expired)s мы создали для Вас заказ №%(id)s "
+"от %(created)s из расчета количества Ваших номеров и выбранного Вами "
+"периода. Его необходимо оплатить до %(expired)s.</p>\n"
+"<p>Просмотреть заказ, изменить период и количество номеров, и произвести "
 "оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href=\"%(url)s"
-"\">%(url)s</a>.</p>\n"
-"<p>Счет надо оплатить до %(expired)s.</p>\n"
+"\">%(url)s</a></p>\n"
 "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
-"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+"Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p> \n"
 
 #: billing/templates/emails/registration.html:6
-msgid "Registration successefull"
+msgid "Registration Successefull"
 msgstr "Успешная регистрация"
 
 #: billing/templates/emails/registration.html:10
-#, python-format
 msgid ""
 "\n"
-"    <p>Hello!</p>\n"
-"    <p>Thank you for registering in 'Maxibooking'!</p>\n"
-"    <p>To enter the program, please follow the link: %(url)s\n"
-"        and use the user's credentials:</p>\n"
+"\n"
+"    <p>Greetings!</p>\n"
+"    <p>Welcome to 'MaxiBooking'! You are now well on your way to start "
+"selling more. </p>\n"
+"    <p>To login to your account, please follow the link: %(url)s\n"
+"    and use your login credentials:</p>\n"
 "    <ul>\n"
 "        <li>username: admin</li>\n"
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Meet your website from Maxi Booking!</p>\n"
+"    <p>To visit Your SMART website simply click on the button below!</p>\n"
 "    <p>\n"
 "        <a href=\"%(website)s\" class=\"btn-primary\" itemprop=\"url\" style="
 "\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: "
@@ -334,9 +368,13 @@ msgid ""
 "background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: "
 "solid; border-width: 10px 20px;\">go to your website</a>\n"
 "    </p>\n"
-"    <p>Knowledge base for work in the program: https://support.maxi-booking."
+"    <p>Don't hesitate to check out our Customer Support Knowledge Base for "
+"lots of guiding material that we have prepared for You: https://support.maxi-"
+"booking.com</p>\n"
+"    <p>Let us know what you think. We love to hear from You. For feedback "
+"and if you have any questions just send us an email at: support@maxi-booking."
 "com</p>\n"
-"    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
+"    <p>We are happy only when you sell more with us!</p>\n"
 "\n"
 msgstr ""
 "\n"
@@ -399,13 +437,18 @@ msgstr ""
 "<p>В Максибукинг мы работаем для Вас!\n"
 "<p>Желаем Вам много продаж.\n"
 
+#: billing/templates/emails/registration_fail.html:6
+msgid "Registation failure"
+msgstr "Ошибка при регистрации"
+
 #: billing/templates/emails/registration_fail.html:10
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
-"    <p>When installing the program \"Maxibooking\" an error occurred.</p>\n"
-"    <p>To resolve this error, please contact support at: support@maxi-"
-"booking.com</p> \n"
+"    <p>Looks like some part of the program has not been installed correctly."
+"</p>\n"
+"    <p>To resolve this, please contact Customer Support Team at: "
+"support@maxi-booking.com</p> \n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
@@ -416,12 +459,12 @@ msgstr ""
 #: billing/templates/emails/sign.html:2
 msgid ""
 "\n"
-"    <p>Yours faithfully,<br>\n"
-"        Technical support 'Maxibooking'</p>\n"
+"    <p>Yours Faithfully,<br>\n"
+"        MaxiBooking Customer Support Team</p>\n"
 "    <p>\n"
 "        E-mail: <a href=\"mailto:support@maxi-booking.com\">support@maxi-"
 "booking.com</a><br>\n"
-"        Knowledge base: <a href=\"https://support.maxi-booking.com\">https://"
+"        Knowledge Base: <a href=\"https://support.maxi-booking.com\">https://"
 "support.maxi-booking.com</a>\n"
 "    </p>\n"
 msgstr ""
@@ -1075,8 +1118,12 @@ msgid "We are glad to see you among our clients!"
 msgstr "Мы рады видеть Вас среди наших клиентов!"
 
 #: finances/tasks.py:31
-msgid "New order created"
+msgid "New Invoice created"
 msgstr "Создан новый счет"
+
+#: finances/tasks.py:63
+msgid "Invoice is due - don’t forget to extend your access! "
+msgstr "Продление периода использования"
 
 #: finances/templates/finances/bill.html:114
 msgid "piece"
@@ -1166,3 +1213,72 @@ msgstr ""
 #: users/models.py:113
 msgid "The unique user`s code"
 msgstr ""
+
+#~ msgid ""
+#~ "\n"
+#~ "    <p>Hello!</p>\n"
+#~ "\n"
+#~ "    %(greetings_new)s\n"
+#~ "\n"
+#~ "    <p>You need to pay order #%(id)s from %(created)s for using the "
+#~ "\"Maxbooking\".</p>\n"
+#~ "    <p>Payment must be made before %(expired)s</p>\n"
+#~ "    <p>You can view the order and make a payment in the personal cabinet "
+#~ "of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+#~ "\n"
+#~ msgstr ""
+#~ "\n"
+#~ "<p>Здравствуйте,</p>\n"
+#~ "\n"
+#~ "%(greetings_new)s\n"
+#~ "\n"
+#~ "<p>Для продолжения пользования Максибукинг Вам необходимо оплатить счет №"
+#~ "%(id)s от %(created)s.</p>\n"
+#~ "<p>Просмотреть счет, изменить период и количество номеров, и произвести "
+#~ "оплату Вы можете в Вашем личном кабинете перейдя по ссылке: <a href="
+#~ "\"%(url)s\">%(url)s</a>.</p>\n"
+#~ "<p>Счет надо оплатить до %(expired)s.</p>\n"
+#~ "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
+#~ "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+
+#~ msgid ""
+#~ "\n"
+#~ "    <p>Hello!</p>\n"
+#~ "    <p>Thank you for payment!</p>\n"
+#~ "    <p>Order #%(id)s from %(created)s was paid.</p>\n"
+#~ msgstr ""
+#~ "\n"
+#~ "<p>Здравствуйте,</p>\n"
+#~ "<p>Ваша оплата счета №%(id)s от %(created)s прошла успешно.</p>\n"
+#~ "<p>Мы рады видеть Вас среди наших клиентов!</p>\n"
+#~ "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
+#~ "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
+
+#~ msgid ""
+#~ "\n"
+#~ "        <p>Hello!</p>\n"
+#~ "        <p>Due to payment arrears, your account in the 'Maxibooking' "
+#~ "system is blocked.</p>\n"
+#~ "        <p>To unlock your account, go to your personal account and pay "
+#~ "for the order #%(order.id)s from %(created)s %(url)s</p> \n"
+#~ "    "
+#~ msgstr ""
+#~ "\n"
+#~ "<p>Здравствуйте,</p>\n"
+#~ "<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в "
+#~ "системе «Максибукинг» заблокирован.</p>\n"
+#~ "<p>Скорее разблокируйте его, что бы не упустить ни одной брони.</p>\n"
+#~ "<p>Для разблокировки аккаунта Вам необходимо оплатить счет №%(order.id)s "
+#~ "от %(created)s в Вашем личном кабинете перейдя по ссылке: <a href="
+#~ "\"%(url)s\">%(url)s</a></p>\n"
+#~ "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? "
+#~ "Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
+
+#~ msgid "Order will expire soon"
+#~ msgstr "Продление периода использования"
+
+#~ msgid "Your account is disabled"
+#~ msgstr "Ваш аккаунт заблокирован"
+
+#~ msgid "we miss you!"
+#~ msgstr "мы скучаем по Вам!"
