Update the emails templates

--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -144,20 +144,6 @@ msgid "we miss You!"
 msgstr "мы скучаем по Вам!"
 
 #: billing/templates/emails/client_disabled.html:11
-#, fuzzy, python-format
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "<p>Hello!</p>\n"
-#| "<p>New Sales are waiting for You! Quickly unlock your account and start "
-#| "selling more.</p>\n"
-#| "<p>To unlock your account simply make a payment for your Invoice #%(id)s "
-#| "from %(created)s in \"My Account\" by clicking on the link: <a href="
-#| "\"%(url)s\">%(url)s</a></p>\n"
-#| "<p>Are there features that you want to try but didn't have a chance to "
-#| "try yet? Write to us. We are happy only when you sell more with us!</"
-#| "p>   \n"
-#| "\n"
 msgid ""
 "\n"
 "\n"
@@ -386,12 +372,9 @@ msgid ""
 "    <p>To visit Your SMART website simply click on the button below!</p>\n"
 "    <p>\n"
 "        <a href=\"%(website)s\" class=\"btn-primary\" itemprop=\"url\" style="
-"\"font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: "
-"border-box; font-size: 14px; color: #FFF; text-decoration: none; line-"
-"height: 2em; font-weight: bold; text-align: center; cursor: pointer; "
-"display: inline-block; border-radius: 0px; text-transform: capitalize; "
-"background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: "
-"solid; border-width: 10px 20px;\">go to your website</a>\n"
+"\"font-family: 'Montserrat', sans-serif; font-weight: normal; font-size: "
+"16px; line-height: 26px; color: #fff; text-decoration: none; padding: 15px "
+"35px; background-color: #2DBABA;\">go to your website</a>\n"
 "    </p>\n"
 "    <p>We are happy only when you sell more with us!</p>\n"
 "\n"
@@ -410,15 +393,12 @@ msgstr ""
 "    </ul>\n"
 "\n"
 "<p>Познакомьтесь со своим сайтом от MaxiBooking!</p>\n"
-" <p>\n"
-"<a href=\"%(website)s\" class=\"btn-primary\" itemprop=\"url\" style=\"font-"
-"family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; "
-"font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-"
-"weight: bold; text-align: center; cursor: pointer; display: inline-block; "
-"border-radius: 0px; text-transform: capitalize; background-color: #ff4632; "
-"margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px "
-"20px;\">перейти на свой сайт</a>\n"
-" </p>\n"
+"    <p>\n"
+"        <a href=\"%(website)s\" class=\"btn-primary\" itemprop=\"url\" style="
+"\"font-family: 'Montserrat', sans-serif; font-weight: normal; font-size: "
+"16px; line-height: 26px; color: #fff; text-decoration: none; padding: 15px "
+"35px; background-color: #2DBABA;\">перейти на свой сайт</a>\n"
+"    </p>\n"
 "<p>Добавьте больше информации о вашем объекте,\n"
 "чтобы ваши продажи заметно выросли.</p>\n"
 "\n"
